deploy/k8s/https/ica-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dataspace-ica-api-https
  namespace: dataspace-ica
  annotations:
    cert-manager.io/issuer: letsencrypt-production
    nginx.ingress.kubernetes.io/proxy-body-size: "20m"
spec:
  ingressClassName: nginx
  rules:
    - host: ica.example.org
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: dataspace-ica-api
                port:
                  number: 80
  tls:
    - hosts:
        - ica.example.org
      secretName: ica-example-org-tls
